<resources>
    <string name="app_name">Kaavapp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Menu</string>
    <string name="title_activity_math">MathActivity</string>
    <string name="title_activity_physics">PhysicsActivity</string>
    <string name="title_activity_chemistry_actitvity">ChemistryActitvity</string>
    <string name="front_page">Front Page</string>
    <string name="math_string">Math</string>
    <string name="chemistry_string">Chemistry</string>
    <string name="physics_string">Physics</string>
    <string name="chemistry_elements">Elements</string>
    <string name="chemistry_acids">Acids</string>
    <string name="chemistry_functional">Functional groups</string>
    <string name="formulas">Formulas</string>
    <string name="search">Search</string>
    <string name="check_input">Check the input!</string>
    <string name="back">Back</string>
    <string name="naming">Naming:</string>
    <string name="hapetus_luvut">Oxidation number</string>
    <string name="elektronega">Elektronegativity: </string>
    <string name="olomuoto">State:</string>
    <string name="sulamis">Melting point: </string>
    <string name="kiehumis">boiling point: </string>
    <string name="tiheys">Density:</string>
    <string name="ominaislampo">Specific heat capacity</string>
    <string name="lammonjohta">Thermal conductivity:</string>
    <string name="teoreettinen">Theoretical: </string>
    <string name="kokeellinen">Experimental: </string>
    <string name="ionisaatioene">Ionization energies (kJ/mol)</string>
    <string name="yleisimmat_isotoopit">Common isotopes: </string>
    <string name="IR_absor">IR absorption frequencies: </string>
    <string name="konsentraatio">Concentration: </string>
    <string name="ph_konsentraatio">pH in concentration: </string>
    <string name="happovakiot">pKa</string>
    <string name="emäsvakiot">pKb</string>
    <string name="puoliintumisaika">Half life: </string>
    <string name="suhteellinenosuus">Relative portion in nature: </string>
    <string name="hajoamistavat">Decay paths: </string>
    <string name="moolimassa"> Molar mass: </string>
    <string name="ph1mliuos">pH at 1M solution:</string>
    <string name="symboli">Symbol</string>
    <string name="vakiot">Constants</string>
    <string name="hapot">Acids</string>
    <string name="algebra">Algebra</string>
    <string name="trigonometria">Trigonometry</string>
    <string name="derivointi">Derivation</string>
    <string name="integrointi">Integration</string>
    <string name="termodynamiikka">Thermodynamics</string>
    <string name="mekaniikka">Mechanics</string>
    <string name="aiheet">Subjects</string>
    <string name="options">Options</string>
    <string name="elektronirakenne">Electrons structure: </string>
    <string name="atomisade">Atomic radius: </string>
    <string name="english">English</string>
    <string name="finnish">Finnish</string>

    <!--
<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    testi -->




   <!--
   oikea

-->
    <string name="banner_ad_unit_id">ca-app-pub-4707921089851609/2444527778</string>

    <string name="vektori">Vectors</string>
    <string name="tilastotiede">Statistics</string>
    <string name="liukoinen">Soluable</string>
    <string name="osittain">Partly soluable</string>
    <string name="niukka">Insoluable</string>
    <string name="reagoi">Reacts</string>
    <string name="suolat">Salts</string>
    <string name="eiTietoa">No data</string>
    <string name="kiintea">Solid</string>
    <string name="neste">Liquid</string>
    <string name="kaasu">Gas</string>
    <string name="alkaaliMetalli">Alkali metal</string>
    <string name="maaAlkaaliMetalli">Earth alkali metal</string>
    <string name="siirtymaMetalli">Transition metal</string>
    <string name="muuMetalli">Other metal</string>
    <string name="puoliMetalli">Metalloid</string>
    <string name="lantanoidi">Lanthanid</string>
    <string name="aktanoidi">Aktanid</string>
    <string name="epametalli">Nonmetal</string>
    <string name="halogeeni">Halogen</string>
    <string name="jalokaasu">Noble gas</string>
    <string name="sp">mp:</string>
    <string name="kp">bp:</string>
    <string name="resistanssi">resistance</string>
    <string name="aine">Materials</string>
    <string name="ionit">Ions</string>
    <string name="trifunt">Values of trigonometric functions</string>
    <string name="aste">Dec</string>
    <string name="radian">Rad</string>
    <string name="yksikot">Units</string>
<string name="lampolaajeneminen">Heat expansion</string>
    <string name="harmooninen_liike">Harmonic motion</string>
    <string name="kinematiika">Kinematics</string>
    <string name="dynamiikka">Dynamics</string>
    <string name="valo">Light</string>
    <string name="ydinfysiikka">Nuclear physics</string>
    <string name="sahko">Electricity</string>
    <string name="magnetismi">Magnetism</string>
    <string name="redox">Redoxpotential</string>
    <string name="reactio">Reaction</string>
    <string name="potential">Potential</string>
    <string name="refraction">Refraction indexes</string>
    <string name="materiaali">Material</string>
    <string name="kerroin">Refraction index</string>
    <string name="virhearvossa">Error on arvoTulos</string>
    <string name="permitivity">Relative permitivities</string>
    <string name="permitiivisyys">relative permitivity</string>
    <string name="permeability">Permeabilities</string>
    <string name="permeabilityheader">Permeability</string>
    <string name="aanennopeus">Speed of sound in materials</string>
    <string name="aanennopeusheader">Speed of sound</string>
    <string name="kerroinTeksti">For wavelength of 589.29nm</string>
    <string name="huoneenlammossa">In room temperature</string>
    <string name="aineCat">Material</string>
    <string name="alkuaineCat">Element</string>
    <string name="arvoCat">Value</string>
    <string name="funkCat">Functional group</string>
    <string name="happoCat">Acid/Base</string>
    <string name="ionCat">Ion</string>
    <string name="isotopeCat">Isotope</string>
    <string name="kaavaCat">Formula</string>
    <string name="muuttujaCat">Variable</string>
    <string name="piikkiCat">IR-peak</string>
    <string name="redoxCat">Reduction potential</string>
    <string name="triFunCat">Value of trigonometric functions</string>
    <string name="vakioCat">Constant</string>
    <string name="yksikkoCat">Unit</string>as
    <string name="stabiili">stable</string>
    <string name="spontaanifissio">spontane fission</string>
    <string name="elektronisieppaus">electron capture</string>
    <string name="protoniemissio">proton emision</string>
    <string name="neutroniemisio">neutron emision</string>
    <string name="isomeeritransfor">isomer transformation</string>
    <string name="alpfa">alpha decay</string>
    <string name="betaminus">beta minus decay</string>
    <string name="betaplus">beta plus decay</string>
    <string name="suosikit">Favorites</string>
    <string name="eituloksia">No results</string>
    <string name="tietoa">Info</string>
    <string name="ohjeet">Instructions</string>
    <string name="tietoacontent">Developers:\nJärvensivu Matti and\nMyöhänen Janne.\nContact: kaavappTeam@gmail.com."</string>
    <string name="ohjeetcontent">You can open the sidebar by swiping left to right or clicking the button on the left top corner.\n\nYou can search by clicking the magnififying glass icon\n\nYou can search by name or by subject for example: Copper or Gas. You can also add favourites by clicking the star\n\n
    You can get more info about the result by clicking it.\n\nYou can touch partially shown lable to see the full text.</string>

</resources>
