<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/mainmenu"
            android:title="@string/front_page" />
        <item
            android:id="@+id/physics"
            android:icon="@drawable/physicsicon"
            android:title = "@string/physics_string"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/matikkaicon"
            android:title="@string/math_string" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/chemistryicon"
            android:title="@string/chemistry_string" />
        <item
            android:id="@+id/suosikit"
            android:icon="@drawable/taysitahti"
            android:title="@string/suosikit" />
    </group>

    <item android:title="@string/aiheet">
        <menu>

            <item
                android:id="@+id/harmooninenliike"
                android:title="@string/harmooninen_liike" />
            <item
                android:id="@+id/kinematiikka"
                android:title="@string/kinematiika" />
            <item
                android:id="@+id/dynamiikka"
                android:title="@string/dynamiikka" />
            <item
                android:id="@+id/valo"
                android:title="@string/valo" />
            <item
                android:id="@+id/ydinfysiikka"
                android:title="@string/ydinfysiikka" />
            <item
                android:id="@+id/termodynamiikka"
                android:title="@string/termodynamiikka" />
            <item
                android:id="@+id/sahko"
                android:title="@string/sahko" />
            <item
                android:id="@+id/magnetismi"
                android:title="@string/magnetismi" />
            <item
                android:id="@+id/yksikot"
                android:title="@string/yksikot" />
            <item
                android:id="@+id/taitekertoimia"
                android:title="@string/refraction" />
        </menu>
    </item>

</menu>
