<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/mainmenu"
            android:title="@string/front_page" />
        <item
            android:id="@+id/math"
            android:icon="@drawable/matikkaicon"
            android:title = "@string/math_string"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/physicsicon"
            android:title="@string/physics_string" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/chemistryicon"
            android:title="@string/chemistry_string" />
        <item
            android:id="@+id/suosikit"
            android:icon="@drawable/taysitahti"
            android:title="@string/suosikit" />

    </group>

    <item android:title="@string/aiheet">
        <menu>

            <item
                android:id="@+id/algebra"
                android:title="@string/algebra" />

            <item
                android:id="@+id/trigonometria"
                android:title="@string/trigonometria" />
            <item
                android:id="@+id/derivointi"
                android:title="@string/derivointi" />

            <item
                android:id="@+id/integrointi"
                android:title="@string/integrointi" />

            <item
                android:id="@+id/vektori"
                android:title="@string/vektori" />

            <item
                android:id="@+id/tilastotiede"
                android:title="@string/tilastotiede" />

        </menu>
    </item>

</menu>
