<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/matikkaicon"
            android:title="@string/math_string" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/physicsicon"
            android:title="@string/physics_string" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/chemistryicon"
            android:title="@string/chemistry_string" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/options" />

    </group>






</menu>
