<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/lninfo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:id="@+id/txtohjeetlabel"
            android:text="@string/ohjeet"
            android:textSize="30dp"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:id="@+id/txtohjeet"
            android:text="@string/ohjeetcontent"
            android:layout_below="@id/txtohjeetlabel" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:id="@+id/txttietoalabel"
            android:text="@string/tietoa"
            android:textSize="30dp"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:id="@+id/txttietoa"
            android:text="@string/tietoacontent"

            android:textStyle="italic"/>

</LinearLayout>
    </ScrollView>